# klovis-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  MEMORY.md  README.md  SOUL.md  docker-compose.yml  pyproject.toml  run.py
.github/workflows/: ci.yml
.skills/development-workflow/: SKILL.md
.skills/github/: SKILL.md
.skills/moltbook/: SKILL.md
assets/: diagrams.md  medium-article-architecture-klovis-fr.md
klovis_agent/: __init__.py  agent.py  api.py  cli.py  config.py  console.py  consolidation.py  daemon.py  decision.py  paths.py  recall.py  result.py
klovis_agent/core/: graph.py  nodes.py  prompts.py  schemas.py
klovis_agent/infra/: __init__.py  persistence.py
klovis_agent/llm/: __init__.py  embeddings.py  gateway.py  router.py  types.py
klovis_agent/memory/: __init__.py  kv.py  semantic.py
klovis_agent/models/: __init__.py  artifact.py  observability.py  plan.py  state.py  step.py  task.py
klovis_agent/perception/: __init__.py  base.py  bus.py  inbox.py
klovis_agent/sandbox/: __init__.py  service.py
klovis_agent/tools/: __init__.py  base.py  docs.py  presets.py  registry.py  workspace.py
klovis_agent/tools/builtin/: __init__.py  browser.py  code_execution.py  discord_bot.py  file_tools.py  filesystem.py  github.py  memory.py  memory_introspection.py  moltbook.py  semantic_memory.py  shell.py  skills.py  web.py
scripts/: record-demo.sh
tests/: conftest.py  test_agent.py  test_agent_loop.py  test_config_result_decision.py  test_consolidation.py  test_core.py  test_daemon.py  test_decision.py  test_discord_bot.py  test_event_bus.py  test_llm.py  test_memory.py  test_models.py  test_perception.py  test_result.py  test_sandbox.py  test_tools.py  test_tools_builtin.py
tests/integration/: test_full_run.py
