[project]
name = "klovis-agent"
version = "0.2.0"
description = "Composable autonomous agent library for Python"
readme = "README.md"
license = "Apache-2.0"
authors = [{ name = "Eric Houzelle" }]
requires-python = ">=3.11"
keywords = ["agent", "autonomous-agent", "langgraph", "llm", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "pydantic>=2.0.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "structlog>=24.0.0",
    "python-ulid>=3.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "ddgs>=9.0.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
discord = ["discord.py>=2.3.0"]
github = [
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
]
sandbox = [
    "opensandbox",
    "opensandbox-code-interpreter",
]
browser = ["playwright>=1.48.0"]
full = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "discord.py>=2.3.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "opensandbox",
    "opensandbox-code-interpreter",
    "playwright>=1.48.0",
]

[project.urls]
Homepage = "https://github.com/eric-houzelle/klovis-agent"
Repository = "https://github.com/eric-houzelle/klovis-agent"
Issues = "https://github.com/eric-houzelle/klovis-agent/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "opensandbox-server>=0.1.8",
    "build>=1.2.2",
    "twine>=5.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["klovis_agent"]

[project.scripts]
klovis-agent = "klovis_agent.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
